# we-together-skill

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  SKILL.md  mkdocs.yml  pyproject.toml  we_together.sample.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  nightly.yml  publish.yml
benchmarks/: condense_groundtruth.json  contradiction_groundtruth.json  embedding_retrieval_groundtruth.json  multimodal_groundtruth.json  multimodal_retrieval_groundtruth.json  persona_drift_groundtruth.json  society_c_groundtruth.json  society_d_groundtruth.json  society_work_groundtruth.json
benchmarks/scale/: bench_10k_2026-04-18T21-26-47Z.json  (+3 more)
codex_skill/: SKILL.md
codex_skill/agents/: openai.yaml
codex_skill_dev/: SKILL.md
codex_skill_ingest/: SKILL.md
codex_skill_release/: SKILL.md
codex_skill_runtime/: SKILL.md
codex_skill_simulation/: SKILL.md
codex_skill_world/: SKILL.md
docker/: Dockerfile  README.md  docker-compose.yml
docs/: CHANGELOG.md  FAQ.md  HANDOFF.md  getting-started.md  good_first_issues.md  index.md  onboarding.md  publish.md  quickstart.md  release_notes_template.md  release_notes_v0.14.0.md  release_notes_v0.15.0.md  release_notes_v0.17.0.md  release_notes_v0.18.0.md  release_notes_v0.19.0.md  release_notes_v0.20.0.md  release_notes_v0.20.1.md  tick-scheduling.md
eval/: baseline.json
scripts/: README.md  activation_path.py  agent_chat.py  analyze.py  auto_resolve_branches.py  bench.py  bench_large.py  bench_scale.py  bootstrap.py  branch_console.py  build_retrieval_package.py  build_wheel.sh  capture_codex_skill_evidence.py  chat.py  cold_memory.py  condense_memories.py  create_group.py  create_scene.py  daily_maintenance.py  dashboard.py  decay.py  demo_openai_assistant.py  dialogue_turn.py  dream_cycle.py  drift.py  e2e_smoke.sh  embed_backfill.py  eval_relation.py  extract_facets.py  federation_e2e_smoke.sh  federation_http_server.py  fix_graph.py  graph_io.py  graph_summary.py  import_audio.py  import_auto.py  import_directory.py  import_email_file.py  import_file_auto.py  import_image.py  (+42 more)
tests/: conftest.py  test_auto_import_cli.py  test_bench.py  test_cli_entry.py  test_cli_workflow.py  test_directory_import_cli.py  test_e2e_smoke.py  test_email_cli.py  test_file_auto_import_cli.py  test_graph_cli.py  test_group_cli.py  test_open_source_readiness.py  test_release_strict_e2e.py  test_seed_demo.py  test_text_chat_cli.py
webui/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
(+565 files in other folders)
